<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/contact_name_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/buttons_call_container"
        android:textSize="24sp"
        android:layout_margin="8dp"/>

    <LinearLayout
           android:id="@+id/buttons_call_container"
           android:orientation="horizontal"
           android:layout_above="@+id/capture_format_text_call"
           android:layout_alignWithParentIfMissing="true"
           android:layout_marginBottom="32dp"
           android:layout_centerHorizontal="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">

       <ImageButton
           android:id="@+id/button_call_disconnect"
           android:background="@mipmap/disconnect"
           android:contentDescription="@string/disconnect_call"
           android:layout_marginEnd="16dp"
           android:layout_width="48dp"
           android:layout_height="48dp"/>

       <ImageButton
           android:id="@+id/button_call_switch_camera"
           android:background="@android:drawable/ic_menu_camera"
           android:contentDescription="@string/switch_camera"
           android:layout_marginEnd="8dp"
           android:layout_width="48dp"
           android:layout_height="48dp"/>

        <ImageButton
           android:id="@+id/button_call_scaling_mode"
           android:background="@mipmap/ic_action_return_from_full_screen"
           android:contentDescription="@string/disconnect_call"
           android:layout_width="48dp"
           android:layout_height="48dp"/>

       <ImageButton
           android:id="@+id/button_call_toggle_mic"
           android:background="@android:drawable/ic_btn_speak_now"
           android:contentDescription="@string/toggle_mic"
           android:layout_marginEnd="8dp"
           android:layout_width="48dp"
           android:layout_height="48dp"/>
    </LinearLayout>

    <TextView
        android:id="@+id/capture_format_text_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/capture_format_slider_call"
        android:textSize="16sp"
        android:text="@string/capture_format_change_text"/>

    <SeekBar
        android:id="@+id/capture_format_slider_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:progress="50"
        android:layout_margin="8dp"/>

    <CheckBox
        android:text="切换单人模式"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:id="@+id/switch_one_view_checkbox" />

    <CheckBox
        android:text="接受远端视频"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/switch_one_view_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:id="@+id/open_remote_video_checkbox" />

    <CheckBox
        android:text="显示远端视频"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/display_remote_view_checkbox"
        android:layout_below="@+id/open_remote_video_checkbox"
        android:layout_centerHorizontal="true"/>

    <CheckBox
        android:text="发送本地视频"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/display_remote_view_checkbox"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:id="@+id/send_local_video_checkbox"/>

    <CheckBox
        android:text="显示本地视频"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/display_local_view_checkbox"/>


</RelativeLayout>
