<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="wrap_content">


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/surfaceViewLocalContainer"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:focusable="true"
                android:focusableInTouchMode="true">
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/local_video_list_button"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <CheckBox
                        android:text="发送本地视频"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="65dp"
                        android:layout_marginTop="30dp"
                        android:id="@+id/checkBox1"/>

                    <CheckBox
                        android:text="显示本地视频"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="65dp"
                        android:id="@+id/checkBox2"/>

                    <CheckBox
                        android:text="切换前后摄像头"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignStart="@+id/checkBox2"
                        android:layout_marginBottom="23dp"
                        android:id="@+id/checkBox3"/>
                </RelativeLayout>

            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#434343"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:id="@+id/surfaceViewRemoteContainer"
                android:layout_width="160dp"
                android:layout_height="200dp"
                android:focusable="true"
                android:focusableInTouchMode="true">
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/remote_video_list_button"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <CheckBox
                        android:text="接受远端视频"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="65dp"
                        android:layout_marginTop="30dp"
                        android:id="@+id/checkBox10"/>


                    <CheckBox
                        android:text="显示远端视频"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_alignParentStart="true"
                        android:visibility="gone"
                        android:layout_marginStart="65dp"
                        android:id="@+id/checkBox11"/>

                    <CheckBox
                        android:text="切换单人模式显示"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/checkBox12"
                        android:layout_centerVertical="true"
                        android:layout_alignStart="@+id/checkBox10"/>
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/videoinitbutton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <LinearLayout
                    android:id="@+id/buttons_videocall_container"
                    android:orientation="horizontal"
                    android:layout_alignWithParentIfMissing="true"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:text="屏幕共享"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/Button1"
                        android:textSize="12sp"
                        android:onClick="jumpOnClick1"/>

                    <Button
                        android:text="打开美颜"
                        android:textSize="12sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/initButton"
                        android:id="@+id/Button2"
                        android:onClick="jumpOnClick1"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/audio_list_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true">

                    <LinearLayout
                        android:id="@+id/buttons_audiocall_container"
                        android:orientation="horizontal"
                        android:layout_alignWithParentIfMissing="true"
                        android:layout_marginBottom="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:id="@+id/button_call_toggle_speak"
                            android:background="@mipmap/ic_lock_ringer_on_alpha"
                            android:contentDescription="@string/toggle_speak"
                            android:layout_width="48dp"
                            android:layout_height="match_parent"
                            android:gravity = "center_vertical|center_horizontal"/>

                        <ImageButton
                            android:id="@+id/button_call_toggle_mic"
                            android:background="@android:drawable/ic_btn_speak_now"
                            android:contentDescription="@string/toggle_mic"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:gravity = "center_vertical|center_horizontal"/>

                        <ImageButton
                            android:id="@+id/button_call_disconnect"
                            android:background="@mipmap/disconnect"
                            android:contentDescription="@string/disconnect_call"
                            android:gravity = "center_vertical|center_horizontal"
                            android:layout_width="48dp"
                            android:layout_height="48dp"/>
                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>
        <SeekBar
            android:id="@+id/sbVoiceChange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50"/>
    </LinearLayout>
    </LinearLayout>
</ScrollView>
</LinearLayout>
